# shards-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  justfile  setup.sh
.cargo/: config.toml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml
src/: lib.rs
